Bug 150676 - Inserting and deleting a simple table in Writer (warnings in console with debug LO)
Summary: Inserting and deleting a simple table in Writer (warnings in console with deb...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.6.0
Keywords:
Depends on:
Blocks: console-noise
  Show dependency treegraph
 
Reported: 2022-08-29 19:22 UTC by BogdanB
Modified: 2023-01-05 17:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-08-29 19:22:08 UTC
Description:
When I insert a simple a new line a after that a table in Writer (default settings) in a new document in the dbg version of LibreOffice I get this message, each time I click in any cell.

warn:legacy.osl:22976:22976:svx/source/dialog/rulritem.cxx:480: Wrong MemberId!


If I select all and delete I get this message
warn:legacy.osl:22976:22976:sw/source/core/access/acccontext.cxx:442: fire event for disposed frame?

(The new line before table is important for deleting all. If there is just a table delete all just remove the table content, not the table)

Steps to Reproduce:
1. See description


Actual Results:
Warnings

Expected Results:
No warnings


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 4c96abd81460977d413d4d28e891bbbac5769ede
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 m.a.riosv 2022-08-29 20:55:50 UTC
I can't repro.
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4c96abd81460977d413d4d28e891bbbac5769ede
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

Anyway, delete a table it's possible through Menu/Table/Delete/Table
Comment 2 BogdanB 2022-08-30 05:14:50 UTC
I am not using dbg version of LibreOffice, so I'm getting messages in the terminal. I can insert very well a table and delete it in LibreOffice, but in the same time, in the background there are warning in the terminal something is not good. 

I'm using Linux-rpm_deb-x86_64@tb87-TDF-dbg/
Comment 3 Telesto 2022-08-30 09:47:16 UTC
I have seen both warnings.. but well I mostly ignore those.

@Mike
What is QA supposed to do with warn:legacy.osl messages?
Comment 4 Mike Kaganski 2022-08-30 09:58:29 UTC
(In reply to BogdanB from comment #2)
> I am not using dbg version of LibreOffice

I suppose "not" is a typo, because only debug builds would emit such warnings.

(In reply to Telesto from comment #3)
> What is QA supposed to do with warn:legacy.osl messages?

Well...
Mostly - ignore them. They can be useful when they accompany some bugs ... and then they really serve their purpose.

But there are also bad warnings (that should not be really a reason to report each and every warning to the bug tracker). Some are just use "warning" machinery wrongly (should had been "info", that is not shown by default, but creators were a bit lazy to run their builds with respective log level, and then didn't remove/re-qualify the messages); and some are even wrong to be shown (indicating an expected and normal flow).

I believe this is one of such bad warnings.
Comment 5 Mike Kaganski 2022-08-30 10:03:32 UTC
(In reply to Mike Kaganski from comment #4)
> I believe this is one of such bad warnings.

OTOH, the one in acccontext.cxx can even indicate something to be improved/fixed. Michael: do you know why would accessible event fire for disposed frames?
Comment 6 Michael Weghorn 2022-08-30 11:56:36 UTC
(In reply to Mike Kaganski from comment #5)
> OTOH, the one in acccontext.cxx can even indicate something to be
> improved/fixed. Michael: do you know why would accessible event fire for
> disposed frames?

I think the fact that the code gets called might be worth a warning. (Why is the calling code using an already disposed a11y object and wants to fire an event for it?)

For this particular case, https://gerrit.libreoffice.org/c/core/+/139039 makes the warning go away for me, s. more details in the commit msg.
Comment 7 BogdanB 2022-08-30 19:51:40 UTC
I tried with 2 paragraphs, if I delete them I get this message, so it is not just for tables, but for anything

warn:legacy.osl:63062:63062:sw/source/core/access/acccontext.cxx:442: fire event for disposed frame?
warn:legacy.osl:63062:63062:sw/source/core/access/acccontext.cxx:442: fire event for disposed frame?
Comment 8 Commit Notification 2022-08-31 06:08:59 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d325edf88c8dbcdaf324b8e3585a314c9351cf60

tdf#150676  sw a11y: Remove item from selection list on dispose

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Weghorn 2022-08-31 06:11:12 UTC
(In reply to BogdanB from comment #7)
> I tried with 2 paragraphs, if I delete them I get this message, so it is not
> just for tables, but for anything
> 
> warn:legacy.osl:63062:63062:sw/source/core/access/acccontext.cxx:442: fire
> event for disposed frame?
> warn:legacy.osl:63062:63062:sw/source/core/access/acccontext.cxx:442: fire
> event for disposed frame?

Yes, I noticed the same while working on the patch and that is covered as well, so that warning should be gone now.
Comment 10 Caolán McNamara 2022-12-30 14:27:01 UTC
lets just silence that "Wrong MemberId" warning: https://gerrit.libreoffice.org/c/core/+/144877
Comment 11 Commit Notification 2022-12-31 11:09:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/305c8365b4066a042cd9cbb42a10f1081b5abb2f

Resolves: tdf#150676 silence SvxColumnItem::QueryValue with 0 arg warning

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 BogdanB 2023-01-01 19:06:12 UTC
Format - Columns - 2 - OK is generating the same warning. I want to test also this  when I will verify this bug if it is solved.
warn:legacy.osl:240724:240724:svx/source/dialog/rulritem.cxx:480: Wrong MemberId!
Comment 13 BogdanB 2023-01-05 17:33:47 UTC
Thanks to all.

Fixed.
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb4c33ef88a0ef252383e7a12678f28c4432347e
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded